[gd_scene load_steps=11 format=3 uid="uid://mj6qmfdw3rhy"]

[ext_resource type="Script" uid="uid://dqhcwoorcjlxp" path="res://Scripts/main.gd" id="1_kln2b"]
[ext_resource type="Texture2D" uid="uid://dfuj7kxrf5r2c" path="res://Assets/Mini Pixel Pack 3/Space_BG (2 frames) (64 x 64).png" id="1_r150o"]
[ext_resource type="PackedScene" uid="uid://ci151o147mius" path="res://Scenes/Player.tscn" id="2_idj7w"]
[ext_resource type="PackedScene" uid="uid://c41oaicp4hnl2" path="res://Scenes/UI.tscn" id="2_rgh2o"]
[ext_resource type="Texture2D" uid="uid://btr3ue23py7gy" path="res://Assets/Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="3_pbw6q"]
[ext_resource type="Texture2D" uid="uid://dqybk8nqybh4j" path="res://Assets/Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="4_v1gob"]
[ext_resource type="AudioStream" uid="uid://wa3ttotu0s1w" path="res://Assets/Mini Pixel Pack 3/Audios/CosmicPulse_FULL_SONG_MusicGPT.mp3" id="7_jw32o"]

[sub_resource type="Animation" id="Animation_idj7w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_r150o"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, 64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_idj7w"]
_data = {
&"RESET": SubResource("Animation_idj7w"),
&"scroll": SubResource("Animation_r150o")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_kln2b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_rgh2o")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("3_pbw6q")

[node name="GameOverButton" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("4_v1gob")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_r150o")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_idj7w")
}
autoplay = "scroll"

[node name="Player" parent="." instance=ExtResource("2_idj7w")]
position = Vector2(127, 228)

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jw32o")
parameters/looping = true

[connection signal="pressed" from="CanvasLayer/CenterContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="UpdateShield"]
